empty results page for flights and hotels

--- a/app/hotel-detail.html
+++ b/app/hotel-detail.html
@@ -424,7 +424,7 @@
             <div class="popular-among-customer-blog m-b-xl">
               <h3 class="head-title text-c-l text-rounded m-b-lg"><span class="text-black count-guest-review">Popular</span>&nbsp;<span class="text-orange">among customers</span></h3>
               <div class="popular-hotel-list">
-                <div class="hotem-item m-b-md">
+                <div class="hotel-item m-b-md">
                   <div class="column pull-left picture-thumb pos-rlt"><a href="#"><img src="img/destinations/hotel03.jpg" alt=""></a></div>
                   <div class="column pull-left hotel-info"><span class="block f-bold text-u-c hotel-name">Mulia Resort Nusa Dua</span><span class="block f-light location">Nusa Dua/Benoa</span><span class="block hotel-star bg-white m-t-sm"><i class="ico ico-star-yellow m-r-xs"></i><i class="ico ico-star-yellow m-r-xs"></i><i class="ico ico-star-yellow m-r-xs"></i><i class="ico ico-star-yellow m-r-xs"></i><i class="ico ico-star-yellow m-r-xs"></i></span></div>
                   <div class="column pull-left rating rating-number text-center"><span class="text-u-c text-primary block f-bold">Fantastic</span>
@@ -435,7 +435,7 @@
                   </div>
                   <div class="clearfix"></div>
                 </div>
-                <div class="hotem-item m-b-md">
+                <div class="hotel-item m-b-md">
                   <div class="column pull-left picture-thumb pos-rlt"><a href="#"><img src="img/destinations/hotel05.jpg" alt=""></a></div>
                   <div class="column pull-left hotel-info"><span class="block f-bold text-u-c hotel-name">Mulia Resort Nusa Dua</span><span class="block f-light location">Nusa Dua/Benoa</span><span class="block hotel-star bg-white m-t-sm"><i class="ico ico-star-yellow m-r-xs"></i><i class="ico ico-star-yellow m-r-xs"></i><i class="ico ico-star-yellow m-r-xs"></i><i class="ico ico-star-yellow m-r-xs"></i><i class="ico ico-star-yellow m-r-xs"></i></span></div>
                   <div class="column pull-left rating rating-number text-center"><span class="text-u-c text-primary block f-bold">Fantastic</span>
@@ -446,7 +446,7 @@
                   </div>
                   <div class="clearfix"></div>
                 </div>
-                <div class="hotem-item m-b-md">
+                <div class="hotel-item m-b-md">
                   <div class="column pull-left picture-thumb pos-rlt"><a href="#"><img src="img/destinations/hotel04.jpg" alt=""></a></div>
                   <div class="column pull-left hotel-info"><span class="block f-bold text-u-c hotel-name">Mulia Resort Nusa Dua</span><span class="block f-light location">Nusa Dua/Benoa</span><span class="block hotel-star bg-white m-t-sm"><i class="ico ico-star-yellow m-r-xs"></i><i class="ico ico-star-yellow m-r-xs"></i><i class="ico ico-star-yellow m-r-xs"></i><i class="ico ico-star-yellow m-r-xs"></i><i class="ico ico-star-yellow m-r-xs"></i></span></div>
                   <div class="column pull-left rating rating-number text-center"><span class="text-u-c text-primary block f-bold">Fantastic</span>
