--- a/app/hotels-search.html
+++ b/app/hotels-search.html
@@ -179,7 +179,7 @@
           <div class="content-right display-cell b-l m-b-xl">
             <div class="block text-md m-b-md">Showing&nbsp;<strong class="f-bold">10 results</strong> out of&nbsp;<strong class="f-bold">800</strong></div>
             <div class="search-result-hotel-block">
-              <div class="hotem-item m-b-md">
+              <div class="hotel-item m-b-md">
                 <div class="column pull-left picture-thumb pos-rlt"><a href="#"><img src="img/destinations/hotel03.jpg" alt=""></a></div>
                 <div class="column pull-left hotel-info"><span class="block f-bold text-u-c hotel-name">Mulia Resort Nusa Dua</span><span class="block f-light location">Nusa Dua/Benoa</span><span class="block hotel-star bg-white m-t-sm"><i class="ico ico-star"></i><i class="ico ico-star"></i><i class="ico ico-star"></i><i class="ico ico-star"></i><i class="ico ico-star"></i><span class="inline m-l-xs m-t-n-xs">Hotel</span></span>
                   <div class="fasilitas pos-abt"><span class="bg-white"><i class="ico ico-wifi"></i><span>&nbsp;Free Wi-Fi</span></span></div>
@@ -192,7 +192,7 @@
                 </div>
                 <div class="clearfix"></div>
               </div>
-              <div class="hotem-item m-b-md">
+              <div class="hotel-item m-b-md">
                 <div class="column pull-left picture-thumb pos-rlt"><a href="#"><img src="img/destinations/hotel02.jpg" alt=""></a></div>
                 <div class="column pull-left hotel-info"><span class="block f-bold text-u-c hotel-name">W Retreat & Spa Bali Seminyak</span><span class="block f-light location">Seminyak / Kerobokan</span><span class="block hotel-star bg-white m-t-sm"><i class="ico ico-star"></i><i class="ico ico-star"></i><i class="ico ico-star"></i><i class="ico ico-star"></i><i class="ico ico-star"></i><span class="inline m-l-xs m-t-n-xs">Hotel</span></span>
                   <div class="fasilitas pos-abt"><span class="bg-white"><i class="ico ico-wifi"></i><span>&nbsp;Free Wi-Fi</span></span></div>
@@ -204,7 +204,7 @@
                   <label class="f-bold m-t-sm text-u-c">Price From</label><span class="block price f-bold"><sup class="inline currency">Rp</sup><span class="inline rate">2,950,<small>000</small></span></span><span class="block f-light text-sm">per night</span><a href="hotel-detail.html" class="btn f-bold text-primary">See Details</a>
                 </div>
               </div>
-              <div class="hotem-item m-b-md">
+              <div class="hotel-item m-b-md">
                 <div class="column pull-left picture-thumb pos-rlt"><a href="#"><img src="img/destinations/hotel01.jpg" alt=""></a></div>
                 <div class="column pull-left hotel-info"><span class="block f-bold text-u-c hotel-name">Ayana Resort & Spa</span><span class="block f-light location">Jimbaran</span><span class="block hotel-star bg-white m-t-sm"><i class="ico ico-star"></i><i class="ico ico-star"></i><i class="ico ico-star"></i><i class="ico ico-star"></i><i class="ico ico-star"></i><span class="inline m-l-xs m-t-n-xs">Hotel</span></span>
                   <div class="fasilitas pos-abt"><span class="bg-white"><i class="ico ico-wifi"></i><span>&nbsp;Free Wi-Fi</span></span></div>
@@ -216,7 +216,7 @@
                   <label class="f-bold m-t-sm text-u-c">Price From</label><span class="block price f-bold"><sup class="inline currency">Rp</sup><span class="inline rate">2,900,<small>000</small></span></span><span class="block f-light text-sm">per night</span><a href="hotel-detail.html" class="btn f-bold text-primary">See Details</a>
                 </div>
               </div>
-              <div class="hotem-item m-b-md">
+              <div class="hotel-item m-b-md">
                 <div class="column pull-left picture-thumb pos-rlt"><a href="#"><img src="img/destinations/hotel04.jpg" alt=""></a></div>
                 <div class="column pull-left hotel-info"><span class="block f-bold text-u-c hotel-name">Alila Villas Uluwatu</span><span class="block f-light location">Uluwatu</span><span class="block hotel-star bg-white m-t-sm"><i class="ico ico-star"></i><i class="ico ico-star"></i><i class="ico ico-star"></i><i class="ico ico-star"></i><i class="ico ico-star"></i><span class="inline m-l-xs m-t-n-xs">Hotel</span></span>
                   <div class="fasilitas pos-abt"><span class="bg-white"><i class="ico ico-wifi"></i><span>&nbsp;Free Wi-Fi</span></span></div>
@@ -228,7 +228,7 @@
                   <label class="f-bold m-t-sm text-u-c">Price From</label><span class="block price f-bold"><sup class="inline currency">Rp</sup><span class="inline rate">2,000,<small>000</small></span></span><span class="block f-light text-sm">per night</span><a href="hotel-detail.html" class="btn f-bold text-primary">See Details</a>
                 </div>
               </div>
-              <div class="hotem-item m-b-md">
+              <div class="hotel-item m-b-md">
                 <div class="column pull-left picture-thumb pos-rlt"><a href="#"><img src="img/destinations/hotel05.jpg" alt=""></a></div>
                 <div class="column pull-left hotel-info"><span class="block f-bold text-u-c hotel-name">Nusa Dua Beach Hotel Spa</span><span class="block f-light location">Nusa Dua / Benoa</span><span class="block hotel-star bg-white m-t-sm"><i class="ico ico-star"></i><i class="ico ico-star"></i><i class="ico ico-star"></i><i class="ico ico-star"></i><span class="inline m-l-xs m-t-n-xs">Hotel</span></span>
                   <div class="fasilitas pos-abt"><span class="bg-white"><i class="ico ico-wifi"></i><span>&nbsp;Free Wi-Fi</span></span></div>
@@ -240,7 +240,7 @@
                   <label class="f-bold m-t-sm text-u-c">Price From</label><span class="block price f-bold"><sup class="inline currency">Rp</sup><span class="inline rate">2,000,<small>000</small></span></span><span class="block f-light text-sm">per night</span><a href="hotel-detail.html" class="btn f-bold text-primary">See Details</a>
                 </div>
               </div>
-              <div class="hotem-item m-b-md">
+              <div class="hotel-item m-b-md">
                 <div class="column pull-left picture-thumb pos-rlt"><a href="#"><img src="img/destinations/hotel06.jpg" alt=""></a></div>
                 <div class="column pull-left hotel-info"><span class="block f-bold text-u-c hotel-name">Amaris Hotel Kuta</span><span class="block f-light location">Kuta</span><span class="block hotel-star bg-white m-t-sm"><i class="ico ico-star"></i><i class="ico ico-star"></i><i class="ico ico-star"></i><i class="ico ico-star"></i><span class="inline m-l-xs m-t-n-xs">Hotel</span></span>
                   <div class="fasilitas pos-abt"><span class="bg-white"><i class="ico ico-wifi"></i><span>&nbsp;Free Wi-Fi</span></span></div>
@@ -252,7 +252,7 @@
                   <label class="f-bold m-t-sm text-u-c">Price From</label><span class="block price f-bold"><sup class="inline currency">Rp</sup><span class="inline rate">2,000,<small>000</small></span></span><span class="block f-light text-sm">per night</span><a href="hotel-detail.html" class="btn f-bold text-primary">See Details</a>
                 </div>
               </div>
-              <div class="hotem-item m-b-md">
+              <div class="hotel-item m-b-md">
                 <div class="column pull-left picture-thumb pos-rlt"><a href="#"><img src="img/destinations/hotel07.jpg" alt=""></a></div>
                 <div class="column pull-left hotel-info"><span class="block f-bold text-u-c hotel-name">Courtyard By Marriott bali Seminyak</span><span class="block f-light location">Seminyak / Kerobokan</span><span class="block hotel-star bg-white m-t-sm"><i class="ico ico-star"></i><i class="ico ico-star"></i><i class="ico ico-star"></i><i class="ico ico-star"></i><span class="inline m-l-xs m-t-n-xs">Hotel</span></span>
                   <div class="fasilitas pos-abt"><span class="bg-white"><i class="ico ico-wifi"></i><span>&nbsp;Free Wi-Fi</span></span></div>
